--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           This project was coded by
           <a href="#" target="_blank">Amanda Khebevu</a> and is
           <a href="https://github.com/Amanda-Khebevu" target="_blank"> on GitHub</a> and
-          <a href="https://shimmering-donut-86ccdf.netlify.app" target="_blank">hosted on Netlify</a>
+          <a href="https://peppy-smakager-44374c.netlify.app" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
